devel-live
+ remove potscale and oldcode completely
+ move update_slots to an earlier point of execution time, only root does it now
+ remove pot_list completely
+ change MAXNEIGH to dynamic array
+ only save new neighbors, may break some other branches
  but speeds up the optimization significantly
  calculate forces with actio=reactio

bzr-20100426
+ start migration to bazaar vcs
+ prepare trunk:
	removed .revisions file
	moved potscale to util directory
	removed html directory
	merged smooth.c into functions.c
	remove MEAM, ADP and DIPOLE parts
	remove all references to format5

CVS-20100422
+ final updates
+ remove charge-extension for ms- and lj-potential

CVS-20100420
+ remove DEBUG_FORCES from pair and eam force calculation
+ prepare for release, minor changes

CVS-20100416
+ import force_adp.c, energy is working, forces are still missing
+ stens -> sym_tens

CVS-20100415
+ new force-file forces_dipole.c added needed for option DIPOLE

CVS-20100414
+ [APOT] chemical potentials are now disabled by default, can be enabled with
		 "enable_cp 1" in parameter file
+ potfit now forces the correct ntypes-setting in the parameter file
+ new information in potential files: #T <interaction>, e.g. #T EAM
+ new potential morse-stretch added
+ charge-extension for ms- and lj-potential
+ option DIPOLE implemented (including new parameters, calc_forces_dipole)

CVS-20100408
+ Actually, there are elements with only one letter

CVS-20100330
+ vektor -> vector
+ first preparations for ADP potentials
+ fix seed option, it actually never worked

CVS-20100312
+ fix simann for tabulated potentials

CVS-20100224
+ add d_eps parameter as an error margin in powell_lsq, can be set in param file
	via d_eps
+ write error report to a file (output_prefix.error)
	grep for "RMS" for force, energy, stress rms-error and total error sum in one line
+ cleaned up header file potfit.h
+ flagfile will be deleted if fit is terminated