@@ -135,3 +135,33 @@ void free_all_pointers()
   free(all_pointers);
   free(pointer_names);
 }
+
+/****************************************************************
+ *
+ *  real normdist(): Returns a normally distributed random variable
+ * 	Uses random() to generate a random number.
+ *
+ *****************************************************************/
+
+real normdist()
+{
+  static int have = 0;
+  static real nd2;
+  real  x1, x2, sqr, cnst;
+
+  if (!(have)) {
+    do {
+      x1 = 2.0 * random() / (RAND_MAX + 1.0) - 1.0;
+      x2 = 2.0 * random() / (RAND_MAX + 1.0) - 1.0;
+      sqr = x1 * x1 + x2 * x2;
+    } while (!(sqr <= 1.0 && sqr > 0));
+    /* Box Muller Transformation */
+    cnst = sqrt(-2.0 * log(sqr) / sqr);
+    nd2 = x2 * cnst;
+    have = 1;
+    return x1 * cnst;
+  } else {
+    have = 0;
+    return nd2;
+  }
+}
