@@ -1,4 +1,5 @@
 devel-live
++ move normdist to utils.c, it is used in simann.c and diff_evo.c
 + remove potscale and oldcode completely
 + move update_slots to an earlier point of execution time, only root does it now
 + remove pot_list completely
